// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
        Shady Grove
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
         
        8
         cars
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      🚈 Boarding!
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
        Shady Grove
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
         
        8
         cars
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#171f3d",
          "fontSize": 18,
        }
      }
    >
      🚊 Train is arriving...
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
        Shady Grove
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
         
        8
         cars
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Array [
              Object {
                "color": "#171f3d",
                "fontSize": 18,
              },
            ],
            Array [
              Object {
                "fontWeight": "bold",
              },
            ],
          ]
        }
      >
        10
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
        minutes
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
        Shady Grove
         
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
         
        8
         cars
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Array [
              Object {
                "color": "#171f3d",
                "fontSize": 18,
              },
            ],
            Array [
              Object {
                "fontWeight": "bold",
              },
            ],
          ]
        }
      >
        TBD 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#171f3d",
            "fontSize": 18,
          }
        }
      >
        minutes
      </Text>
    </Text>
  </View>
</View>
`;

exports[`renders when no trains scheduled 1`] = `
<View
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#171f3d",
        "fontSize": 18,
      }
    }
  >
    No trains are currently scheduled
  </Text>
</View>
`;
